# Meinkraft

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  components.rs  ecs.rs  game_state.rs  input.rs  input_manager.rs  lib.rs  main.rs  persistence.rs  renderer.rs  resources.rs  scheduler.rs  shaders.rs  state.rs  systems.rs  window.rs  window_manager.rs
src/components/: block.rs  chunk.rs  lod.rs  renderable.rs  transform.rs
src/resources/: camera.rs  config.rs  gl_state.rs  input_state.rs  mesh.rs  mesh_generator.rs  renderer.rs  shader_program.rs  texture_manager.rs  world_builder.rs  world_generator.rs
src/shaders/: fragment.glsl  shadow_vertex.glsl  stars_fragment.glsl  stars_vertex.glsl  vertex.glsl
src/systems/: chunk_loading_system.rs  chunk_meshing_system.rs  init.rs  init_system.rs  input_system.rs  render.rs  render_system.rs
src/world/: resource_loader.rs  world_builder.rs
