[package]
name = "meinkraft"
version = "0.1.0"
authors = [
  "Michael Brusegard <56915010+michaelbrusegard@users.noreply.github.com>",
]
edition = "2021"
repository = "https://github.com/michaelbrusegard/Meinkraft"
license = "Apache-2.0"
readme = "README.md"
publish = false

[build-dependencies]
gl_generator = "0.14.0"

[dependencies]
gl = "0.14.0"
glutin = "0.32.2"
winit = "0.30.9"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
glam = "0.30.1"
hecs = "0.10.5"
image = "0.25.6"
fnv = "1.0.7"
noise = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
rayon = "1.10.0"
crossbeam-channel = "0.5.15"
num_cpus = "1.16.0"
directories = "6.0.0"
rand = "0.9.1"
